Add html structure   Add CSS styling

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>CG PAINT</title>
   </head>
   <body>
-    <h1>Webpack Template All Set Up!</h1>
+    <!-- <h1>Webpack Template All Set Up!</h1> -->
+     <div class="container">
+     <header id="main-header">
+      <h1>CG Paint</h1>
+     </header>
+
+     <nav id="tools-nav">
+      <ul id="paint-tools">
+
+      </ul>
+      <ul id="algorithms-list">
+        
+      </ul>
+     </nav>
+     <section id="main-area">
+      <canvas id="main-canvas">
+
+      </canvas>
+     </section>
+
+     <footer id="universal-footer">
+
+     </footer>
+
+    </div>
+
+
+    
   </body>
 </html>
