Add freehandDraw Feature on canvas
    Currently implemented with hard code
    Fix: Constant values

--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,18 @@
 
      <nav id="tools-nav">
       <ul id="paint-tools">
+        <input type="range"
+        id="brush-size" min="1"
+        max="50" value="5">
+    <input type="color"
+        id="color-picker">
 
+    <button id="eraser">
+        Eraser
+    </button>
+    <button id="clear-canvas">
+        Clear
+    </button>
       </ul>
       <ul id="algorithms-list">
         
